--- a/packages/kv-store/package.json
+++ b/packages/kv-store/package.json
@@ -28,11 +28,12 @@
     "in memory cache",
     "distributed invalidation",
     "consistent-hashing",
-    "p2p",
+    "p2p cache",
     "distributed",
     "decentralized",
     "sharding",
-    "peer to peer",
+    "dynamo",
+    "peer to peer cache",
     "distributed-systems",
     "high availability",
     "consistent hashing",
@@ -40,6 +41,7 @@
     "peer discovery",
     "load balancing",
     "replication",
+    "distributed quorum",
     "dynamic allocation"
   ],
   "author": "Mahendra Hegde",
