--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/mahendraHegde/peer-ring.git"
   },
   "scripts": {
+    "clean": "chmod +x clean.sh && ./clean.sh",
     "test": "pnpm --filter=@peer-ring/* test",
     "setup:k3d": "export K3D_PATH='./k3d/' && k3d cluster list | grep -q 'peer-ring' || k3d cluster create --config ${K3D_PATH}/k3d.yaml",
     "test:e2e:setup": "pnpm setup:k3d && chmod +x ./e2e-setup.sh && ./e2e-setup.sh",
@@ -46,11 +47,11 @@
   "author": "Mahendra Hegde",
   "license": "MIT",
   "devDependencies": {
-    "@changesets/cli": "^2.27.1",
-    "@nestjs/platform-express": "^10.3.8",
-    "@nestjs/testing": "^10.3.8",
+    "@changesets/cli": "^2.27.5",
+    "@nestjs/platform-express": "^10.3.9",
+    "@nestjs/testing": "^10.3.9",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.14.8",
     "@types/pino": "^7.0.5",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
@@ -58,20 +59,20 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^17.3.1",
+    "eslint-plugin-n": "^17.9.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-unused-imports": "^3.1.0",
+    "eslint-plugin-promise": "^6.2.0",
+    "eslint-plugin-unused-imports": "^4.0.0",
     "jest": "^29.7.0",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
     "prettier-eslint": "^16.3.0",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.1.2",
-    "typedoc": "^0.25.13",
-    "typedoc-plugin-markdown": "^3.17.1",
-    "typescript": "^5.4.5"
+    "ts-jest": "^29.1.5",
+    "typedoc": "^0.26.1",
+    "typedoc-plugin-markdown": "^4.1.0",
+    "typescript": "^5.5.2"
   },
   "dependencies": {
-    "pino": "^9.1.0"
+    "pino": "^9.2.0"
   }
 }
